# Zavrsni_Rad

./: .gitignore  Algoritam2.cpp  Algoritam3.cpp  Algorithms.cpp  Algotiram1.cpp  CMakeLists.txt  EqualityDefinition.cpp  EqualityDefinition.hpp  FastaReader.cpp  FastaReader.hpp  Maxlength.cpp  Maxlength.hpp  README.md  alg2  alg3  build.sh  formated.txt  main.cpp  resultsParser.pl  test.sh
Paper/: edlib.txt  formatedExampleInfix.txt  literatura.bib  maxlen.cpp  maxlen.csv  recompile.sh  table1.csv  table1.ods  table12.csv  uvod.tex  zavrsni.aux  zavrsni.bbl  zavrsni.blg  zavrsni.dvi  zavrsni.tex  zavrsni.toc
integration_files/: Algorithms.cpp  Algorithms.hpp
landau_vishkin/src/: Algorithms.cpp  Maxlength.cpp
landau_wishkin/include/: Algorithms.hpp
landau_wishkin/src/: Algorithms.cpp  thread_pool.cpp
results/: results.csv  results.txt  resultsg.txt  resultsg50.csv  resultsi.csv  resultsi.txt  resultsp.csv  resultsp.txt  resultsp100.csv  resultsp250.csv  resultsp50.csv  resultsp500.csv
test_data/: test_pattern.fasta  test_text.fasta
